Bug 167733 - Project view and status leds don't use KDE colors from theme for translation status
Summary: Project view and status leds don't use KDE colors from theme for translation ...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-30 14:01 UTC by Karl Ove Hufthammer
Modified: 2008-07-31 22:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2008-07-30 14:01:31 UTC
Version:           0.2 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.11-60.fc8

Project view and status leds don't use KDE colors for translation status

Currently, the colours used for showing the translation status graphs are hardcoded (green=translated, blue=fuzzy, red=untranslated). But KDE 4 now has named colours that can and should be used for this, 'Positive Text', 'Neutral Text', 'Negative Text'. For most themes, they are set to a variant of green, orange and red.

These colours should be used for

1) the status graphs in the 'Project View' pane.
2) the status graphs in the catalogue manager.
3) the leds showing 'fuzzy / not fuzzy' and 'translated / not translated'.

For the last item, of course only two of the colours should be used (positive/negative). But perhaps the two leds could be replaced by *one*, using all three colours with the same meaning as for the status graph, for consistency.

Also note that the three colours are available in 5 different groups. For most themes, the colours are identical, but for the default theme (Oxygen), they are different for the 'Selection' group, which should naturally be used when you *select* a line in the graph view (I don't know enough about the theme system to know if this happens automatically).
Comment 1 Nick Shaforostoff 2008-07-31 22:24:41 UTC
SVN commit 840292 by shaforo:

Project view and status leds now use KDE colors from theme for translation status

BUG: 167733


 M  +7 -2      kaiderview.cpp  
 M  +9 -4      project/projectwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=840292