Project view and status leds now use KDE colors from theme for translation status

BUG: 167733

svn path=/branches/KDE/4.1/kdesdk/lokalize/; revision=840292